2000-06-12 20:25 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/rtl/gtwin/gtwin.c
     ! Partial fix for international keyboard AltGr handling.

20000612-23:10 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/tedior.prg
     + Added GotoLine(nRow) method and a couple fixes.

2000-06-12 21:47 UTC+0200 JfL&RaC <jfl@mafact.com> <rac@mafact.com>
   *source\rtl\tclass.prg
    * Correct bug with default initialiser for Logical and Numeric
      * Now a logical is .F. by default and a numeric is 0 !


2000-06-12 17:20 UTC+0200 JfL&RaC <jfl@mafact.com> <rac@mafact.com>
   *source\rtl\tobject.prg
   *source\rtl\tclass.prg
   *source\vm\classes.prg
     * Many corrections regarding superobject access as inherited datas
     * Inherit of a method Setget work even if the same msg
     * is a data from one superobject.

2000-06-12 16:55 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/run.c
    *source/rtl/gtsln/Makefile
    *source/rtl/gtsln/gtsln.c
    *source/rtl/gtsln/kbsln.c
    *source/rtl/gtsln/keytrans.c
        *added more slang support - thanks to Marek Paliwoda

    *source/rtl/gtcrs/gtcrs.c
    *source/rtl/gtdos/gtdos.c
    *source/rtl/gtos2/gtos2.c
    *source/rtl/gtpca/gtpca.c
    *source/rtl/gtstd/gtstd.c
    *source/rtl/gtwin/gtwin.c
        *added dummy hb_gt_Suspend()/hb_gt_Resume()

2000-06-12 16:00 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
        *fixed bug when 'DO &macrovar' was used

2000-06-12 15:40 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.c
        *fixed unused variable tmpFiles

    *source/vm/macro.c
        *fixed bug when field variable was macro-compiled

2000-06-11 23:30 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>

   source/compiler/harbour.c
     * hb_compCompile() Added Clipper like message showing how many parse errors found.
     * hb_compAutoOpen() added 2nd parameter pointer to bSkipGen of caller (hb_compCompile()).